# hyp3-lib

./: .gitignore  .gitlab-ci.yml  .trufflehog.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  conda-env.yml  environment.yml  pyproject.toml  requirements-static.txt  ruff.toml  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: changelog.yml  coverage-report.yml  create-jira-issue.yml  distribute.yml  labeled-pr.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml  test.yml
.gitlab/: gitleaks.toml  merge_back.gitlab-ci.yaml  merge_back.sh  tag_version.sh
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
asf_granule_util/: .gitignore  README.md  install.py  run_tests.sh  setup.py  test-upload.sh  upload.sh  version.txt
asf_granule_util/asf_granule_util/: __init__.py  download.py  granules.py  pairs.py  stack.py
asf_granule_util/examples/: dl-example.py
asf_granule_util/tests/: main.py  test_download.py  test_granules.py  test_pairs.py  timeout.py
asf_granule_util/tests/data/: correct_prints.json  granules.json
config/: Antimeridian_North_1500m_UTM1N.dbf  Antimeridian_North_1500m_UTM1N.sbn  Antimeridian_North_1500m_UTM1N.sbx  Antimeridian_North_1500m_UTM1N.shp  Antimeridian_North_1500m_UTM1N.shp.xml  Antimeridian_North_1500m_UTM1N.shx  Antimeridian_South_1500m_UTM1S.dbf  Antimeridian_South_1500m_UTM1S.sbn  Antimeridian_South_1500m_UTM1S.sbx  Antimeridian_South_1500m_UTM1S.shp  Antimeridian_South_1500m_UTM1S.shp.xml  Antimeridian_South_1500m_UTM1S.shx  eu_dem_v11_coverage.dbf  eu_dem_v11_coverage.shp  eu_dem_v11_coverage.shx  get_dem.py.cfg  get_dem.py.cfg.aws  gimp_coverage.shp  gimp_coverage.shx  ned1_coverage.shx  ned2_coverage.dbf  ned2_coverage.shp  ned2_coverage.shx  rema_coverage.dbf  rema_coverage.shp  rema_coverage.shx  shapefile_dir.txt  shapefile_dir.txt.example  srtmau1_coverage.shx  srtmgl1_coverage.dbf  srtmgl1_coverage.shp  srtmgl1_coverage.shx  srtmgl3_coverage.dbf  srtmgl3_coverage.shp  srtmgl3_coverage.shx
docs/: rgb_decomposition.md
etc/lut/: glacier_tracking.lut
granule_lib/: .gitignore  test-upload.sh  upload.sh
granule_lib/granule_lib/: __init__.py  granules.py  pairs.py  stack.py
hyp3lib/: __init__.py  apply_wb_mask.py  asf_geometry.py  asf_time_series.py  aws.py  byteSigmaScale.py  copy_metadata.py  createAmp.py  create_wb_mask.py  cutGeotiffs.py  cutGeotiffsByLine.py  dem.py  dem2isce.py  draw_polygon_on_raster.py  enh_lee_filter.py  exceptions.py  execute.py  extendDateline.py  fetch.py  file_subroutines.py  geotiff_lut.py  getBursts.py  getDemFor.py  getSubSwath.py  get_asf.py  get_bb_from_shape.py  get_bounding.py  get_dem.py  get_orb.py  image.py  ingest_S1_granule.py  iscegeo2geotif.py  makeAsfBrowse.py  makeChangeBrowse.py  makeColorPhase.py  makeKml.py  make_arc_thumb.py  make_cogs.py  metadata.py  offset_xml.py  (+16 more)
hyp3lib/depreciated/: SLC_copy_S1_fullSW.py  area2point.py  asf_geometry.py  asf_time_series.py  byteSigmaScale.py  copy_metadata.py  createAmp.py  dem2isce.py  file_subroutines.py  getBursts.py  getDemFor.py  getSubSwath.py  get_bounding.py  get_dem.py  get_orb.py  ingest_S1_granule.py  iscegeo2geotif.py  makeAsfBrowse.py  make_cogs.py  offset_xml.py  par_s1_slc_single.py  ps2dem.py  raster_boundary2shape.py  resample_geotiff.py  utm2dem.py  verify_opod.py
hyp3lib/depreciated/gamma/: README.md  SLC_copy_S1_fullSW.py  ingest_S1_granule.py  par_s1_slc_single.py
hyp3lib/depreciated/isce/: README.md  dem2isce.py
hyp3lib/etc/: vrt.j2
hyp3lib/etc/config/: dems.json  eu_dem_v11_coverage.shp  get_dem.cfg  get_dem.py.cfg  get_dem.py.cfg.aws  gimp_coverage.dbf  ned13_coverage.dbf  ned13_coverage.shp  ned13_coverage.shx  ned1_coverage.dbf  ned1_coverage.shp  ned2_coverage.shp  rema_coverage.dbf  srtmau1_coverage.dbf  srtmau1_coverage.shp  srtmgl1_coverage.dbf  srtmgl1_coverage.shp  srtmgl1_coverage.shx  srtmgl3_coverage.dbf  srtmgl3_coverage.shp  srtmgl3_coverage.shx
hyp3lib/etc/lut/: change.lut
hyp3lib/image/: image.py  rgb_decomp.py  tiff.py
hyp3lib/sentinel1/: orbits.py  scene.py
scripts/: GC_map_mod
src/: .gitignore  SLC_copy_S1_fullSW.py  aoiShape.py  apply_wb_mask.py  argparse_helpers.py  asf_geometry.py  asf_time_series.py  byteSigmaScale.py  changeDetectionDriver.py  changeDetectionMetadata.py  changePoint2shape.py  commonOverlapBoundary.py  copy_metadata.py  createAmp.py  create_wb_mask.py  csv2time_series_netcdf.py  cutGeotiffs.py  cutGeotiffsByLine.py  dem2isce.py  draw_polygon_on_raster.py  enh_lee_filter.py  execute.py  extendDateline.py  extractNetcdfTime.py  extractNetcdfVariables.py  file_subroutines.py  filterChangeGeotiff.py  filterChangeMatStack.py  filterChangeNetcdf.py  findPersistentChange.py  geotiff2time_series.py  geotiff_lut.py  geotiff_meta2xls.py  getBursts.py  getDemFor.py  getParameter.py  getSubSwath.py  get_bb_from_shape.py  get_bounding.py  get_dem.py  (+48 more)
src/granule_lib/: .gitignore  run_tests.sh  setup.py
src/granule_lib/granule_lib/: exceptions.py  (+1 more)
src/hyp3lib/: SLC_copy_S1_fullSW.py  __init__.py  asf_geometry.py  asf_time_series.py  aws.py  byteSigmaScale.py  createAmp.py  dem.py  exceptions.py  execute.py  fetch.py  getParameter.py  get_asf.py  get_orb.py  image.py  makeAsfBrowse.py  par_s1_slc_single.py  raster_boundary2shape.py  resample_geotiff.py  rtc2color.py  saa_func_lib.py  system.py  util.py
testing_files/test.SAFE/: granule_name.txt
tests/: conftest.py  test_aws.py  test_dem.py  test_entrypoints.py  test_execute.py  test_fetch.py  test_getSubSwath.py  test_get_bounding.py  test_get_dem.py  test_get_orb.py  test_image.py  test_make_asf_browse.py  test_make_cogs.py  test_scene.py  test_system.py  test_util.py
tests/data/: test_dem.tif  test_geotiff.tif  test_metadata.py  test_ned13_dem.tif  test_srtmgl1_antimeridian_dem.tif
tests/depreciated/: test_getSubSwath.py  test_get_bounding.py  test_get_dem.py
tests/image/: test_image.py  test_tiff.py
tests/sentinel1/: test_orbits.py  test_scene.py
(+5 files in other folders)
