[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "hyp3lib"
requires-python = ">=3.8"
authors = [
    {name="tools-bot", email="UAF-asf-apd@alaska.edu"},
]
description = "Common library for HyP3 plugins"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "boto3",
    "gdal",
    "imageio",
    "importlib_metadata",
    "lxml",
    "matplotlib",
    "netCDF4",
    "numpy<1.24",
    "pillow",
    "pyproj>=2",
    "pyshp",
    "requests",
    "scipy",
    "six",
    "statsmodels",
    "urllib3",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "botocore",
    "flake8",
    "flake8-import-order",
    "flake8-blind-except",
    "flake8-builtins",
    "pytest",
    "pytest-cov",
    "pytest-console-scripts",
    "responses",
]

[project.scripts]
"byteSigmaScale.py" = "hyp3lib.byteSigmaScale:main"
"cutGeotiffs.py" = "hyp3lib.cutGeotiffs:main"
"get_asf.py" = "hyp3lib.get_asf:main"
"get_orb.py" = "hyp3lib.get_orb:main"
"makeAsfBrowse.py" = "hyp3lib.makeAsfBrowse:main"
"resample_geotiff.py" = "hyp3lib.resample_geotiff:main"
"SLC_copy_S1_fullSW.py" = "hyp3lib.SLC_copy_S1_fullSW:main"
"utm2dem.py" = "hyp3lib.utm2dem:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false
script-files = ["scripts/GC_map_mod"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
