[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hyp3lib"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name="ASF APD/Tools Team", email="UAF-asf-apd@alaska.edu"},
]
description = "Common library for HyP3 plugins"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "boto3>=1.36.0",
    "gdal",
    "lxml",
    "netCDF4",
    "numpy",
    "pillow",
    "requests",
    "scipy",
    "statsmodels",
    "urllib3",
]
dynamic = ["version"]

[project.optional-dependencies]
develop = [
    "botocore",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-console-scripts",
    "responses",
]

[project.scripts]
"get_orb.py" = "hyp3lib.get_orb:main"
"resample_geotiff.py" = "hyp3lib.resample_geotiff:main"
"rtc2color.py" = "hyp3lib.rtc2color:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false
script-files = ["scripts/GC_map_mod"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
# The directories to consider when resolving first- vs. third-party imports.
# See: https://docs.astral.sh/ruff/settings/#src
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort: https://docs.astral.sh/ruff/rules/#isort-i
    # TODO: Uncomment the following extensions and address their warnings:
    # "UP",  # pyupgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    # "D",   # pydocstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "ANN", # annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    # "PTH", # use-pathlib-pth: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D1", "ANN"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
install_types = true
non_interactive = true
pretty = true
disable_error_code = ["import-untyped"]
exclude = [
    "/build/"
]
